--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
     rel="stylesheet">
 
-    <!--Ajax for form-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <!--Ajax for form-->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -33,41 +33,54 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!--Font-Awesome-->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+    integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
 
   <!-- ======= Header ======= -->
   <header id="header">
-    <div class="container">
+    <div class="container d-lg-flex align-items-lg-center">
+      <div class="col-lg-6 d-flex flex-column align-items-center">
+        <!-- <div class="d-flex flex-column align-items-center" id="mypic-link">
+          <a href="index.html" class="mr-auto w-60 mb-3" style="width: 70%;" ><img
+            src="assets/img/mypic1_black.png" alt="" class="img-fluid"></a>
+        </div> -->
+        <h1><a href="index.html">Midhun K Paniker</a></h1>
+        <h2>I'm a passionate <span>MERN Stack Developer</span> from Kerala</h2>
 
-      <h1><a href="index.html">Midhun K Paniker</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>MERN Stack Developer</span> from Kerala</h2>
+        <nav id="navbar" class="navbar">
+          <ul>
+            <li><a class="nav-link active" href="#header">Home</a></li>
+            <li><a class="nav-link" href="#about">About</a></li>
+            <li><a class="nav-link" href="#resume">Resume</a></li>
+            <li><a class="nav-link" href="#services">Services</a></li>
+            <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+            <li><a class="nav-link" href="#contact">Contact</a></li>
+          </ul>
+          <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav><!-- .navbar -->
 
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link active" href="#header">Home</a></li>
-          <li><a class="nav-link" href="#about">About</a></li>
-          <li><a class="nav-link" href="#resume">Resume</a></li>
-          <li><a class="nav-link" href="#services">Services</a></li>
-          <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link" href="#contact">Contact</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
-
-      <div class="social-links">
-        <a href="https://www.linkedin.com/in/midhun-k-paniker-726226231" class="linkedin"><i class="bi bi-linkedin"></i></a>
-        <a href="https://github.com/midhunkalarikkal" class="github"><i class="bi bi-github"></i></a>
-        <a href="https://x.com/Midhun_k__?t=628ZJ1W-dZl53LikH4F2hg&s=09" class="twitter"><i class="bi bi-twitter"></i></a>
-        <a href="https://www.facebook.com/midhunpaniker1?mibextid=ZbWKwL" class="facebook"><i class="bi bi-facebook"></i></a>
-        <a href="https://instagram.com/midhun_kalarikkal__?igshid=OGQ5ZDc2ODk2ZA==" class="instagram"><i class="bi bi-instagram"></i></a>
+        <div class="social-links">
+          <a href="https://www.linkedin.com/in/midhun-k-paniker-726226231" class="linkedin"><i
+              class="bi bi-linkedin"></i></a>
+          <a href="https://github.com/midhunkalarikkal" class="github"><i class="bi bi-github"></i></a>
+          <a href="https://x.com/Midhun_k__?t=628ZJ1W-dZl53LikH4F2hg&s=09" class="twitter"><i
+              class="bi bi-twitter"></i></a>
+          <a href="https://www.facebook.com/midhunpaniker1?mibextid=ZbWKwL" class="facebook"><i
+              class="bi bi-facebook"></i></a>
+          <a href="https://instagram.com/midhun_kalarikkal__?igshid=OGQ5ZDc2ODk2ZA==" class="instagram"><i
+              class="bi bi-instagram"></i></a>
+        </div>
       </div>
-
+      <div class="d-none d-lg-block col-lg-6 d-flex">
+        <a href="index.html" class="m-lg-auto d-none d-lg-block"><img
+          src="assets/img/mypic1_black.png" alt="" class="img-fluid" style="margin-left: 50px;"></a>
+      </div>
     </div>
+
   </header><!-- End Header -->
 
   <!-- ======= About Section ======= -->
@@ -82,8 +95,8 @@
       </div>
 
       <div class="row">
-        <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/favicon.jpg" class="img-fluid" alt="">
+        <div class="col-lg-4 d-flex align-items-center justify-content-center" data-aos="fade-right">
+          <img src="assets/img/mypic1_wb.png" class="img-fluid w-75" alt="">
         </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>MERN Stack Developer</h3>
@@ -388,7 +401,9 @@
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item pb-0">
             <h4>Midhun K Paniker</h4>
-            <p><em> I'm a passionate MERN stack developer, holding a B.Tech and a 3-year diploma in Computer Science Engineering. My tech journey started with curiosity and a desire to create impactful applications. Excited for the road ahead.</em>
+            <p><em> I'm a passionate MERN stack developer, holding a B.Tech and a 3-year diploma in Computer Science
+                Engineering. My tech journey started with curiosity and a desire to create impactful applications.
+                Excited for the road ahead.</em>
             </p>
             <p>
             <ul>
@@ -404,13 +419,18 @@
             <h4>Bachelor of Technology in Computer Science Engineering</h4>
             <h5>2020 - 2023</h5>
             <p><em>MES College Of Engineering, Kuttippuram</em></p>
-            <p>As a lateral entry student, I successfully completed my B.Tech in an accelerated 3-year program. While I faced the challenge of five supplementary subjects, I am determined to clear them this year, underscoring my commitment to continuous improvement and dedication to my education.</p>
+            <p>As a lateral entry student, I successfully completed my B.Tech in an accelerated 3-year program. While I
+              faced the challenge of five supplementary subjects, I am determined to clear them this year, underscoring
+              my commitment to continuous improvement and dedication to my education.</p>
           </div>
           <div class="resume-item">
             <h4>Diploma in Computer Science <Em>Engineering</Em></h4>
             <h5>2017 - 2020</h5>
             <p><em>Seethi Sahib Memorial Polytechnic, Tirur</em></p>
-            <p>I have achieved a 3-year Diploma in Computer Science Engineering with a commendable CGPA of 7.19. My journey into the realm of web development began during my diploma, where I initiated learning the fundamentals. This provided me with a strong foundation and sparked my passion for mastering the world of web technologies.</p>
+            <p>I have achieved a 3-year Diploma in Computer Science Engineering with a commendable CGPA of 7.19. My
+              journey into the realm of web development began during my diploma, where I initiated learning the
+              fundamentals. This provided me with a strong foundation and sparked my passion for mastering the world of
+              web technologies.</p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -422,10 +442,14 @@
             <p>
             <ul>
               <li>Currently enrolled in an intensive MERN stack course at Bototype.</li>
-              <li>Emphasizing self-directed learning, fostering independence and a proactive approach to mastering the course material.</li>
-              <li>Actively involved in diverse projects over a span of 6 months, gaining invaluable practical experience.</li>
-              <li>Benefit from weekly reviews conducted by experienced professionals, providing constructive feedback and guidance.</li>
-              <li>Opportunity to practically apply theoretical knowledge, refining skills and competencies in MERN stack development.</li>
+              <li>Emphasizing self-directed learning, fostering independence and a proactive approach to mastering the
+                course material.</li>
+              <li>Actively involved in diverse projects over a span of 6 months, gaining invaluable practical
+                experience.</li>
+              <li>Benefit from weekly reviews conducted by experienced professionals, providing constructive feedback
+                and guidance.</li>
+              <li>Opportunity to practically apply theoretical knowledge, refining skills and competencies in MERN stack
+                development.</li>
             </ul>
             </p>
           </div>
@@ -469,7 +493,8 @@
           <div class="icon-box">
             <div class="icon"><i class="fa-solid fa-database"></i></div>
             <h4><a href="">DBMS</a></h4>
-            <p>Develop dynamic and interactive web applications, effectively manage databases, and ensure seamless backend functionality.</p>
+            <p>Develop dynamic and interactive web applications, effectively manage databases, and ensure seamless
+              backend functionality.</p>
           </div>
         </div>
 
@@ -543,8 +568,9 @@
               <h4>Instagram</h4>
               <p>Homepage</p>
               <div class="portfolio-links">
-                <a href="Instagram_portfolio.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
-                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+                <a href="Instagram_portfolio.html" data-gallery="portfolioDetailsGallery"
+                  data-glightbox="type: external" class="portfolio-details-lightbox" title="Portfolio Details"><i
+                    class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -578,7 +604,7 @@
           </div>
         </div>
 
-        
+
 
       </div>
 
@@ -609,11 +635,15 @@
             <i class="bx bx-share-alt"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
-              <a href="https://www.linkedin.com/in/midhun-k-paniker-726226231" class="linkedin"><i class="bi bi-linkedin"></i></a>
+              <a href="https://www.linkedin.com/in/midhun-k-paniker-726226231" class="linkedin"><i
+                  class="bi bi-linkedin"></i></a>
               <a href="https://github.com/midhunkalarikkal" class="github"><i class="bi bi-github"></i></a>
-              <a href="https://x.com/Midhun_k__?t=628ZJ1W-dZl53LikH4F2hg&s=09" class="twitter"><i class="bi bi-twitter"></i></a>
-              <a href="https://www.facebook.com/midhunpaniker1?mibextid=ZbWKwL" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="https://instagram.com/midhun_kalarikkal__?igshid=OGQ5ZDc2ODk2ZA==" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://x.com/Midhun_k__?t=628ZJ1W-dZl53LikH4F2hg&s=09" class="twitter"><i
+                  class="bi bi-twitter"></i></a>
+              <a href="https://www.facebook.com/midhunpaniker1?mibextid=ZbWKwL" class="facebook"><i
+                  class="bi bi-facebook"></i></a>
+              <a href="https://instagram.com/midhun_kalarikkal__?igshid=OGQ5ZDc2ODk2ZA==" class="instagram"><i
+                  class="bi bi-instagram"></i></a>
             </div>
           </div>
         </div>
@@ -634,7 +664,7 @@
         </div>
       </div>
 
-      <form novalidate id="submit-form" class="was-validated php-email-form mt-4" >
+      <form novalidate id="submit-form" class="was-validated php-email-form mt-4">
         <div class="row">
           <div class="col-md-6 form-group">
             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -655,7 +685,7 @@
           <div class="sent-message">Your message has been sent. Thank you!</div>
         </div>
         <div class="text-center"><button type="submit" value="Submit">Send Message</button></div>
-        
+
       </form>
 
     </div>
@@ -677,6 +707,8 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/form.js"></script>
+
+  
 
 </body>
 
