--- a/Amazon_portfoilio.html
+++ b/Amazon_portfoilio.html
@@ -77,7 +77,7 @@
             </ul>
 
             <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              Creating an Amazon-inspired webpage was an insightful venture. Employing HTML, CSS, and JavaScript, I carefully crafted a layout tailored for medium to large devices, ensuring responsiveness. By forgoing Bootstrap, I delved into crafting personalized styles and components. The result was a webpage featuring an organized navbar, smooth scrolling sections, and attractive product showcases and promotional banners, providing an optimal user experience on medium and larger screens.
             </p>
           </div>
 
