--- a/Flipkart_portfolio.html
+++ b/Flipkart_portfolio.html
@@ -71,7 +71,7 @@
             </ul>
 
             <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              I embarked on an exciting journey of web design, crafting a captivating rendition of Flipkart's home page. Harnessing the combined prowess of HTML, CSS, Bootstrap, and JavaScript, I meticulously brought the design to life. Bootstrap's classes and components played a pivotal role in creating a responsive, visually appealing layout. The webpage featured an elegant navbar for seamless navigation, multiple scrolling sections for engaging content, and thoughtfully designed product displays. Additionally, strategically placed banners added an element of advertisement and shopping convenience, enhancing the overall user experience.
             </p>
           </div>
 
