--- a/index.html
+++ b/index.html
@@ -40,10 +40,15 @@
 
 <body>
 
+  <!--Media query-->
+  <!-- <div class="device-size-display">
+    <span id="device-size"> </span>
+  </div> -->
+
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="container d-lg-flex align-items-lg-center">
-      <div class="col-lg-6 d-flex flex-column align-items-center">
+      <div class="col-lg-6 d-flex flex-column align-items-center align-items-lg-start">
         <!-- <div class="d-flex flex-column align-items-center" id="mypic-link">
           <a href="index.html" class="mr-auto w-60 mb-3" style="width: 70%;" ><img
             src="assets/img/mypic1_black.png" alt="" class="img-fluid"></a>
@@ -75,9 +80,10 @@
               class="bi bi-instagram"></i></a>
         </div>
       </div>
-      <div class="d-none d-lg-block col-lg-6 d-flex">
-        <a href="index.html" class="m-lg-auto d-none d-lg-block"><img
-          src="assets/img/mypic1_black.png" alt="" class="img-fluid" style="margin-left: 50px;"></a>
+      <div class="d-none d-lg-block col-lg-6 d-flex"> <!---->
+        <a href="index.html" class="m-lg-auto "> <!--d-none d-lg-block-->
+          <img src="assets/img/mypic1_black.png" alt="" class="headerimg img-fluid" style="margin-left: 50px;">
+        </a>
       </div>
     </div>
 
