Description added for each portfolio

--- a/Amazon_portfoilio.html
+++ b/Amazon_portfoilio.html
@@ -75,9 +75,8 @@
               <li><strong>Project date</strong>: 14 September, 2023</li>
               <li><strong>Project URL</strong>: <a href="https://midhunkalarikkal.github.io/amazonhomepage/">https://midhunkalarikkal.github.io/amazonhomepage/</a></li>
             </ul>
-
             <p>
-              Creating an Amazon-inspired webpage was an insightful venture. Employing HTML, CSS, and JavaScript, I carefully crafted a layout tailored for medium to large devices, ensuring responsiveness. By forgoing Bootstrap, I delved into crafting personalized styles and components. The result was a webpage featuring an organized navbar, smooth scrolling sections, and attractive product showcases and promotional banners, providing an optimal user experience on medium and larger screens.
+              Creating an Amazon-inspired webpage was an insightful venture. Employing HTML, CSS, and JavaScrip. The result was a webpage featuring an organized navbar, smooth scrolling sections, and attractive product showcases and promotional banners, providing an optimal user experience on medium and larger screens.
             </p>
           </div>
 
