--- a/Instagram_portfolio.html
+++ b/Instagram_portfolio.html
@@ -66,9 +66,8 @@
               <li><strong>Project date</strong>: 14 September, 2023</li>
               <li><strong>Project URL</strong>: <a href="https://midhunkalarikkal.github.io/instahomepage/">https://midhunkalarikkal.github.io/instahomepage/</a></li>
             </ul>
-
             <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              Creating an Instagram-inspired webpage was an insightful venture. Employing HTML, CSS, and JavaScript. I included almost all frontend design components in this webpage. Left side section for navigation buttons, center section for scrolling posts and right side section for accounts. and also the story section.
             </p>
           </div>
 
