--- a/Netflix_portfolio.html
+++ b/Netflix_portfolio.html
@@ -69,9 +69,9 @@
               <li><strong>Project date</strong>: 14 September, 2023</li>
               <li><strong>Project URL</strong>: <a href="https://midhunkalarikkal.github.io/Netflixhomepage/Index.html">https://midhunkalarikkal.github.io/Netflixhomepage/Index.html</a></li>
             </ul>
-
             <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              
+I created a captivating Netflix-inspired homepage using HTML and CSS, leveraging the power of CSS flex properties for seamless layout. The webpage boasts multiple scrolling sections, each offering unique content and information. At the centerpiece is a prominent movie banner showcasing a featured film alongside its relevant details, creating an engaging focal point for visitors. The navigation bar neatly organizes additional links, enhancing user experience and enabling seamless exploration of the webpage's rich and diverse content.
             </p>
           </div>
 
