--- a/Kalari_portfolio.html
+++ b/Kalari_portfolio.html
@@ -14,7 +14,9 @@
   <link href="assets/img/favicon.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -26,6 +28,22 @@
 
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
+
+  <!-- Hiding scrollbar without removing its function-->
+  <style>
+    /* Hide scrollbar for WebKit browsers */
+    ::-webkit-scrollbar {
+      width: 0;
+      /* Remove scrollbar space */
+      background: transparent;
+      /* Optional: just make scrollbar invisible */
+    }
+
+    /* Optional: only hide scrollbar thumb */
+    ::-webkit-scrollbar-thumb {
+      background: transparent;
+    }
+  </style>
 
 </head>
 
@@ -67,11 +85,20 @@
               <li><strong>Category</strong>: Static Web Page</li>
               <li><strong>Client</strong>: Kuttippuram Kalari Samajam</li>
               <li><strong>Project date</strong>: 22 September, 2023</li>
-              <li><strong>Project URL</strong>: <a href="https://kuttippuramkalari-7a30c.web.app/">https://kuttippuramkalari-7a30c.web.app/</a></li>
+              <li><strong>Project URL</strong>: <a
+                  href="https://kuttippuramkalari-7a30c.web.app/">https://kuttippuramkalari-7a30c.web.app/</a></li>
             </ul>
-
             <p>
-              Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+              I am proud to present my inaugural static webpage dedicated to my cherished family community, Kalari.
+              Merging my passion for web development and love for my community, I meticulously crafted a responsive
+              website. It features a sleek navigation bar for easy browsing, gracefully welcoming visitors to a
+              dedicated introduction page. An informative 'About' section sheds light on our rich heritage and values.
+              One of the highlights is a captivating gallery, showcasing our community's vibrant journey through
+              carefully curated visuals. Additionally, a 'Contact' page offers a seamless way to reach us, complete with
+              an embedded map for convenience. Harnessing the power of HTML, CSS, Bootstrap, and JavaScript, I ensured
+              an engaging and visually appealing design. Git bash played a crucial role in version control, allowing for
+              a streamlined and organized development process. This project marks a meaningful step in honoring my
+              community and showcasing my web development skills.
             </p>
           </div>
 
@@ -84,7 +111,7 @@
 
   <div class="credits">
     &copy; All copyrights claimed 2023 <a href="https://github.com/midhunkalarikkal">midhun k paniker</a>
-    </div>
+  </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
