--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
   <!-- <div class="device-size-display">
     <span id="device-size"> </span>
   </div> -->
+  
+  <!--Preloader-->
+  <div class="preloader">
+    <div class="spinner"></div>
+  </div>
+
+
 
   <!-- ======= Header ======= -->
   <header id="header">
@@ -54,7 +61,7 @@
             src="assets/img/mypic1_black.png" alt="" class="img-fluid"></a>
         </div> -->
         <h1><a href="index.html">Midhun K Paniker</a></h1>
-        <h2>I'm a passionate <span>MERN Stack Developer</span> from Kerala</h2>
+        <h2 >I'm a passionate <span>MERN Stack Developer</span> from Kerala</h2>
 
         <nav id="navbar" class="navbar">
           <ul>
