--- a/index.html
+++ b/index.html
@@ -677,28 +677,28 @@
         </div>
       </div>
 
-      <form novalidate id="submit-form" class="was-validated php-email-form mt-4">
+      <form id="submit-form" role="form" class="was-validated php-email-form mt-4" onsubmit = "return(validate());" name="myForm">
         <div class="row">
           <div class="col-md-6 form-group">
             <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required oninput="validateInput()">
           </div>
           <div class="col-md-6 form-group mt-3 mt-md-0">
             <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
+            <div class="invalid-feedback"></div>
           </div>
         </div>
         <div class="form-group mt-3">
           <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
         </div>
         <div class="form-group mt-3">
-          <textarea class="form-control" name="message" id="message" rows="5" placeholder="Message" required></textarea>
+          <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
         </div>
         <div class="my-3">
           <div class="loading">Loading</div>
-          <div class="error-message"></div>
-          <div class="sent-message">Your message has been sent. Thank you!</div>
+          <div class="error-message">Error... Please try again</div>
+          <div class="sent-message">Thank you for messaging.</div>
         </div>
-        <div class="text-center"><button type="submit" value="Submit">Send Message</button></div>
-
+        <div class="text-center"><button type="submit">Send Message</button></div>
       </form>
 
     </div>
