--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <!--Ajax for form-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
+  <!-- Jquery -->
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
@@ -546,28 +549,33 @@
         </div>
       </div>
 
-      <form id="submit-form" role="form" class="was-validated php-email-form mt-4" name="myForm">
+      <form id="submit-form" role="form" class="php-email-form">
         <div class="row">
           <div class="col-md-6 form-group">
-            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required oninput="validateInput()">
+            <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required oninput="validateName()">
+            <div id="invalid-name" class="invalid-name text-danger fs-6 mt-2"></div>
           </div>
           <div class="col-md-6 form-group mt-3 mt-md-0">
-            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-            <div class="invalid-feedback"></div>
+            <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required oninput="validateEmail()">
+            <div id="invalid-email" class="invalid-name text-danger fs-6 mt-2"></div>
           </div>
         </div>
         <div class="form-group mt-3">
-          <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
+          <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required oninput="validateSubject()">
+          <div id="invalid-subject" class="invalid-name text-danger fs-6 mt-2"></div>
         </div>
         <div class="form-group mt-3">
-          <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+          <textarea class="form-control" name="message" id="message" rows="5" placeholder="Message" required oninput="validateMessage()"></textarea>
+          <div id="invalid-message" class="invalid-name text-danger fs-6 mt-2"></div>
         </div>
         <div class="my-3">
-          <div class="loading">Loading</div>
+          <div class="loading">Loading...</div>
           <div class="error-message">Error... Please try again</div>
-          <div class="sent-message">Thank you for messaging.</div>
+          <div class="sent-message">Thank you for your message!</div>
         </div>
-        <div class="text-center"><button type="submit">Send Message</button></div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-primary">Send Message</button>
+        </div>
       </form>
 
     </div>
@@ -584,7 +592,6 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
-  <script src="assets/vendor/php-email-form/validate.js"></script>
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
