--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/favicon.jpg" rel="icon">
-  <link href="assets/img/favicon.jpg" rel="apple-touch-icon">
+  <link href="assets/img/mypic1_black.png" rel="icon">
+  <link href="assets/img/mypic1_black.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link
