--- a/index.html
+++ b/index.html
@@ -59,10 +59,6 @@
   <header id="header">
     <div class="container d-lg-flex align-items-lg-center">
       <div class="col-lg-6 d-flex flex-column align-items-center align-items-lg-start">
-        <!-- <div class="d-flex flex-column align-items-center" id="mypic-link">
-          <a href="index.html" class="mr-auto w-60 mb-3" style="width: 70%;" ><img
-            src="assets/img/mypic1_black.png" alt="" class="img-fluid"></a>
-        </div> -->
         <h1><a href="index.html">Midhun K Paniker</a></h1>
         <h2 >I'm a passionate <span>MERN Stack Developer</span> from Kerala</h2>
 
@@ -148,50 +144,6 @@
         </div>
       </div>
 
-    </div><!-- End About Me -->
-
-    <!-- ======= Counts ======= -->
-    <div class="counts container">
-
-      <div class="row">
-
-        <div class="col-lg-3 col-md-6">
-          <div class="count-box">
-            <i class="bi bi-emoji-smile"></i>
-            <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1"
-              class="purecounter"></span>
-            <p>Happy Clients</p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
-          <div class="count-box">
-            <i class="bi bi-journal-richtext"></i>
-            <span data-purecounter-start="0" data-purecounter-end="8" data-purecounter-duration="1"
-              class="purecounter"></span>
-            <p>Projects</p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-          <div class="count-box">
-            <i class="bi bi-headset"></i>
-            <span data-purecounter-start="0" data-purecounter-end="14" data-purecounter-duration="1"
-              class="purecounter"></span>
-            <p>Hours Of Support</p>
-          </div>
-        </div>
-
-        <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
-          <div class="count-box">
-            <i class="bi bi-award"></i>
-            <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1"
-              class="purecounter"></span>
-            <p>Awards</p>
-          </div>
-        </div>
-
-      </div>
     </div>
 
     <!-- ======= Skills  ======= -->
@@ -200,74 +152,24 @@
       <div class="section-title">
         <h2>Skills</h2>
       </div>
-
-      <div class="row skills-content">
-
-        <div class="col-lg-6">
-
-          <div class="progress">
-            <span class="skill">HTML <i class="val">90%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-              </div>
+        <div class="row">
+            <div class="col-12">
+                <ul class="list-inline">
+                    <li class="list-inline-item text-light p-2 rounded shadow-sm">HTML5</li>
+                    <li class="list-inline-item text-light p-2 rounded shadow-sm">CSS3</li>
+                    <li class="list-inline-item text-light p-2 rounded shadow-sm">Bootstrap</li>
+                    <li class="list-inline-item text-light p-2 rounded shadow-sm">Tailwind</li>
+                    <li class="list-inline-item text-light p-2 rounded shadow-sm">JavaScript</li>
+                    <li class="list-inline-item text-light p-2 rounded shadow-sm">React</li>
+                    <li class="list-inline-item text-light p-2 rounded shadow-sm">Node.js</li>
+                    <li class="list-inline-item text-light p-2 rounded shadow-sm">MongoDB</li>
+                    <li class="list-inline-item text-light p-2 rounded shadow-sm">PostgresQL</li>
+                    <li class="list-inline-item text-light p-2 rounded shadow-sm">Express</li>
+                    <li class="list-inline-item text-light p-2 rounded shadow-sm">Redux</li>
+                    <li class="list-inline-item text-light p-2 rounded shadow-sm">Dsa</li>
+                </ul>
             </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">CSS <i class="val">90%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">JavaScript <i class="val">75%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Mongo DB <i class="val">70%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
         </div>
-
-        <div class="col-lg-6">
-
-          <div class="progress">
-            <span class="skill">PHP <i class="val">80%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Bootstrap <i class="val">90%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">React <i class="val">70%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100">
-              </div>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
 
     </div>
   </section>
@@ -596,6 +498,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/form.js"></script>
+  <script src="assets/js/api.js"></script>
 
 </body>
 
