--- a/index.html
+++ b/index.html
@@ -322,6 +322,20 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Lapshop1.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Lapshop</h4>
+              <p>Ecommerce</p>
+              <div class="portfolio-links">
+                <a href="lapshop.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Flipkart.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Flipkart</h4>
