valorant project added to portfolio

--- a/index.html
+++ b/index.html
@@ -42,18 +42,11 @@
 </head>
 
 <body>
-
-  <!--Media query-->
-  <!-- <div class="device-size-display">
-    <span id="device-size"> </span>
-  </div> -->
   
   <!--Preloader-->
   <div class="preloader">
     <div class="spinner"></div>
   </div>
-
-
 
   <!-- ======= Header ======= -->
   <header id="header">
@@ -336,9 +329,23 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Lapshop1.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>VALORANT</h4>
+              <p>Fanpage</p>
+              <div class="portfolio-links">
+                <a href="valorant.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Flipkart.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Flipkart</h4>
+              <h4>FLIPCART</h4>
               <p>Homepage</p>
               <div class="portfolio-links">
                 <a href="Flipkart_portfolio.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
@@ -366,7 +373,7 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Instagram.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Instagram</h4>
+              <h4>INSTAGRAM</h4>
               <p>Homepage</p>
               <div class="portfolio-links">
                 <a href="Instagram_portfolio.html" data-gallery="portfolioDetailsGallery"
@@ -381,7 +388,7 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Netflix.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Netflix</h4>
+              <h4>NETFLIX</h4>
               <p>Homepage</p>
               <div class="portfolio-links">
                 <a href="Netflix_portfolio.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
@@ -395,8 +402,8 @@
           <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Kalari.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Kalari</h4>
-              <p>WEBSITE</p>
+              <h4>KALARI</h4>
+              <p>Website</p>
               <div class="portfolio-links">
                 <a href="Kalari_portfolio.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
                   class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
@@ -498,7 +505,7 @@
   </section>
 
   <div class="credits">
-    <a href="https://github.com/midhunkalarikkal">midhun k paniker</a>
+    &copy; All copyrights claimed 2024 <a href="https://github.com/midhunkalarikkal">midhun k paniker</a>
   </div>
 
   <!-- Vendor JS Files -->
