portfolio section edited

--- a/index.html
+++ b/index.html
@@ -357,9 +357,9 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Amazon.png" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/valorant1.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Amazon</h4>
+              <h4>AMAZON</h4>
               <p>Homepage</p>
               <div class="portfolio-links">
                 <a href="Amazon_portfoilio.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
