resume section updated

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
             <li><a class="nav-link active" href="#header">Home</a></li>
             <li><a class="nav-link" href="#about">About</a></li>
             <li><a class="nav-link" href="#resume">Resume</a></li>
-            <li><a class="nav-link" href="#services">Services</a></li>
             <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
             <li><a class="nav-link" href="#contact">Contact</a></li>
           </ul>
@@ -113,14 +112,13 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>05 oct 1999</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://github.com/midhunkalarikkal/portfoliowebsite</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+91 8157974230</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Malappuram, KERALA</span></li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>23</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Btech</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>midhunkpaniker@gmail.com</span>
                 </li>
@@ -199,9 +197,7 @@
             <h4>Bachelor of Technology in Computer Science Engineering</h4>
             <h5>2020 - 2023</h5>
             <p><em>MES College Of Engineering, Kuttippuram</em></p>
-            <p>As a lateral entry student, I successfully completed my B.Tech in an accelerated 3-year program. While I
-              faced the challenge of five supplementary subjects, I am determined to clear them this year, underscoring
-              my commitment to continuous improvement and dedication to my education.</p>
+            <p>As a lateral entry student, I successfully completed my B.Tech in an accelerated 3-year program. Although I have one supplementary subject remaining, I am determined to clear it on the next opportunity, demonstrating my commitment to continuous improvement and dedication to my education.</p>
           </div>
           <div class="resume-item">
             <h4>Diploma in Computer Science <Em>Engineering</Em></h4>
@@ -224,7 +220,7 @@
               <li>Currently enrolled in an intensive MERN stack course at Bototype.</li>
               <li>Emphasizing self-directed learning, fostering independence and a proactive approach to mastering the
                 course material.</li>
-              <li>Actively involved in diverse projects over a span of 6 months, gaining invaluable practical
+              <li>Actively involved in diverse projects over a span of 8 months, gaining invaluable practical
                 experience.</li>
               <li>Benefit from weekly reviews conducted by experienced professionals, providing constructive feedback
                 and guidance.</li>
@@ -234,58 +230,16 @@
             </p>
           </div>
           <div class="resume-item">
-            <h4>Static webpages</h4>
-            <h5>2020 - 2023</h5>
-            <p><em>My own projects</em></p>
+            <h4>Web projects</h4>
+            <p><em>Academic and personal</em></p>
             <p>
             <ul>
-              <li>Proficient in designing and hosting multiple webpages on GitHub.</li>
-              <li>Well-versed in using Git, an effective version control system.</li>
-              <li>Familiar with efficiently managing and tracking project changes using Git.</li>
+              <li>Proficient in MERN Stack: Skilled in developing full-stack web applications using MongoDB, Express.js, React.js, and Node.js, with a solid grasp of both front-end and back-end technologies.</li>
+              <li>Experienced in Web Application Design, Development, and Hosting: Successfully designed, developed, and deployed multiple web applications, ensuring responsive designs, efficient server-side functionality, and optimized performance through AWS deployment and Nginx configuration.</li>
             </ul>
             </p>
           </div>
         </div>
-      </div>
-
-    </div>
-  </section>
-
-  <!-- ======= Services Section ======= -->
-  <section id="services" class="services">
-    <div class="container">
-
-      <div class="section-title">
-        <h2>Services</h2>
-        <p>My Services</p>
-      </div>
-
-      <div class="row">
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
-          <div class="icon-box">
-            <div class="icon"><i class="fa-solid fa-code"></i></div>
-            <h4><a href="">Web Designing</a></h4>
-            <p>Designing using Html, Css, Bootstrap, Javascript and React</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
-          <div class="icon-box">
-            <div class="icon"><i class="fa-solid fa-database"></i></div>
-            <h4><a href="">DBMS</a></h4>
-            <p>Develop dynamic and interactive web applications, effectively manage databases, and ensure seamless
-              backend functionality.</p>
-          </div>
-        </div>
-
-        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
-          <div class="icon-box">
-            <div class="icon"><i class="fa-solid fa-wand-magic-sparkles"></i></div>
-            <h4><a href="">Editing</a></h4>
-            <p>Editing photos and videos and making it as a good Frame</p>
-          </div>
-        </div>
-
       </div>
 
     </div>
@@ -357,6 +311,20 @@
 
         <div class="col-lg-4 col-md-6 portfolio-item filter-web">
           <div class="portfolio-wrap">
+            <img src="assets/img/portfolio/Kalari.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>KALARI</h4>
+              <p>Website</p>
+              <div class="portfolio-links">
+                <a href="Kalari_portfolio.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
+                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="portfolio-wrap">
             <img src="assets/img/portfolio/Amazon.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>AMAZON</h4>
@@ -397,21 +365,6 @@
             </div>
           </div>
         </div>
-
-        <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-          <div class="portfolio-wrap">
-            <img src="assets/img/portfolio/Kalari.png" class="img-fluid" alt="">
-            <div class="portfolio-info">
-              <h4>KALARI</h4>
-              <p>Website</p>
-              <div class="portfolio-links">
-                <a href="Kalari_portfolio.html" data-gallery="portfolioDetailsGallery" data-glightbox="type: external"
-                  class="portfolio-details-lightbox" title="Portfolio Details"><i class="bx bx-link"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-
 
 
       </div>
