lapshop portfolio section updated

--- a/lapshop.html
+++ b/lapshop.html
@@ -14,7 +14,9 @@
   <link href="assets/img/favicon.jpg" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
+    rel="stylesheet">
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -44,13 +46,39 @@
 
             <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
-
+                <div class="swiper-slide" style="height: auto">
+                  <img src="assets/img/portfolio/Lapshop2.png" style="height: 100%; width: 100%;" alt="">
+                </div>
                 <div class="swiper-slide" style="height: auto">
                   <img src="assets/img/portfolio/Lapshop1.png" style="height: 100%; width: 100%;" alt="">
                 </div>
                 <div class="swiper-slide" style="height: auto">
-                  <img src="assets/img/portfolio/Lapshop2.png" style="height: 100%; width: 100%;" alt="">
-                </div>    
+                  <img src="assets/img/portfolio/Lapshop3.png" style="height: 100%; width: 100%;" alt="">
+                </div>
+                <div class="swiper-slide" style="height: auto">
+                  <img src="assets/img/portfolio/Lapshop4.png" style="height: 100%; width: 100%;" alt="">
+                </div>
+                <div class="swiper-slide" style="height: auto">
+                  <img src="assets/img/portfolio/Lapshop5.png" style="height: 100%; width: 100%;" alt="">
+                </div>
+                <div class="swiper-slide" style="height: auto">
+                  <img src="assets/img/portfolio/Lapshop6.png" style="height: 100%; width: 100%;" alt="">
+                </div>
+                <div class="swiper-slide" style="height: auto">
+                  <img src="assets/img/portfolio/Lapshop7.png" style="height: 100%; width: 100%;" alt="">
+                </div>
+                <div class="swiper-slide" style="height: auto">
+                  <img src="assets/img/portfolio/Lapshop8.png" style="height: 100%; width: 100%;" alt="">
+                </div>
+                <div class="swiper-slide" style="height: auto">
+                  <img src="assets/img/portfolio/Lapshop9.png" style="height: 100%; width: 100%;" alt="">
+                </div>
+                <div class="swiper-slide" style="height: auto">
+                  <img src="assets/img/portfolio/Lapshop10.png" style="height: 100%; width: 100%;" alt="">
+                </div>
+                <div class="swiper-slide" style="height: auto">
+                  <img src="assets/img/portfolio/Lapshop11.png" style="height: 100%; width: 100%;" alt="">
+                </div>
               </div>
               <div class="swiper-pagination"></div>
             </div>
@@ -63,11 +91,36 @@
               <li><strong>Category</strong>: Node Web Application</li>
               <li><strong></strong></li>
               <li><strong>Project date</strong>: 5 June, 2024</li>
-              <li><strong>Project URL</strong>: <a href="https://github.com/midhunkalarikkal/lapshop">https://github.com/midhunkalarikkal/lapshop</a></li>
+              <li><strong>Github Link</strong>: <a href="https://github.com/midhunkalarikkal/lapshop"
+                  target="_blank">https://github.com/midhunkalarikkal/lapshop</a>
+              </li>
+              <li><strong>Live Link</strong>: <a href="https://lapshop.site"
+                  target="_blank">https://www.lapshop.site</a></li>
             </ul>
-            <p>
-            I developed a feature-rich eCommerce web application using Node.js, Express.js, and MongoDB, designed to be robust and scalable. The application includes a dynamic front-end built with EJS, HTML5, CSS3, Bootstrap, jQuery, and FontAwesome, ensuring a seamless and responsive user experience. Hosted on AWS with Nginx for efficient server management, the project provides comprehensive functionalities for both users and administrators. Users can enjoy features like coupons, wallets, referral programs, product returns, wishlists, and more, while administrators have access to a dashboard with real-time information, tables, and charts. The admin panel also supports account management, image uploads for categories, products, and homepage ad-banners. With Git for version control and a variety of npm packages, this project reflects my commitment to delivering complete and production-ready web solutions.
-            </p>
+            <p class="text-justify" style="line-height: 1.6; text-align: justify;">
+              I developed one of my most challenging and rewarding projects—an E-Commerce Web Application for Laptops! This project was built entirely from scratch, giving me hands-on experience in full-stack development, from front-end design to back-end functionality. It was an incredible learning journey, and I’m continuously striving to enhance its features and performance.
+
+              Some of the key features include Filter, Sort, Cart with Save for Later, Product Reviews, Order Tracking, Flexible Payment Options, Responsive Design, Admin Dashboard, Product & Order Management, User Management System, Banner & Coupon Management, and Sales Reports.            </p>
+            <div id="projectDetails" class="mt-3">
+                <h6 class="mt-4">Tech Stack 💻</h6>
+                <ul>
+                    <li><strong>Frontend:</strong> HTML, CSS, Bootstrap, EJS</li>
+                    <li><strong>Backend:</strong> Node.js, Express.js</li>
+                    <li><strong>Database:</strong> MongoDB</li>
+                    <li><strong>Payment Gateway:</strong> Razorpay</li>
+                    <li><strong>File Upload:</strong> Multer</li>
+                    <li><strong>Email Notifications:</strong> Nodemailer</li>
+                </ul>
+
+                <h6 class="mt-4">Hosting:</h6>
+                <ul>
+                    <li>🌐 <strong>AWS EC2:</strong> Configured with Nginx and SSL certificates for secure transactions.</li>
+                </ul>
+            </div>
+
+
+    
+
           </div>
 
         </div>
@@ -79,7 +132,7 @@
 
   <div class="credits">
     &copy; All copyrights claimed 2024 <a href="https://github.com/midhunkalarikkal">midhun k paniker</a>
-    </div>
+  </div>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
